# thermal-anomaly-detection-at-mine-sites-identifying-safety-risks

./: .gitignore  06_thermal_anomaly_detection_blog.md  06_thermal_anomaly_detection_blog_linkedin_post.md  06_thermal_anomaly_production.py  06_thermal_anomaly_production.py.bak  06_thermal_anomaly_visualizations.py  06_thermal_anomaly_visualizations.py.bak  16_thermal_anomaly_modis_blog.md  16_thermal_modis_visualizations.py  README.md  article.md  config.yaml  pyproject.toml
docs/: 16_thermal_anomaly_modis_blog_linkedin_post.md
src/mine_thermal_anomaly/: __init__.py  analysis.py  baseline.py  config.py  detection.py  io.py  modis.py  paths.py  pipeline.py  plots_blog06.py  plots_blog16.py  runner.py  style.py
tests/: test_config.py  test_detection.py
