[project]
name = "mine-thermal-anomaly"
version = "0.1.0"
description = "MODIS LST thermal anomaly detection and risk assessment at mine sites"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.10.0",
    "matplotlib>=3.10.9",
    "numpy>=2.4.4",
    "pandas>=2.3.3",
    "pyyaml>=6.0",
    "signalplot>=0.1",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.9"]

[project.scripts]
mine-thermal = "mine_thermal_anomaly.runner:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mine_thermal_anomaly"]

[tool.hatch.build.targets.wheel.force-include]
"config.yaml" = "config.yaml"

[tool.uv]
package = true

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
